added missing RTTI.cpp after merging from engine branch removed duplicate function definitions form Sector.cpp left as a result of merging from engine

--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
@@ -310,6 +310,7 @@
     <ClCompile Include="Reaction.cpp" />
     <ClCompile Include="ReactionAttributed.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="RTTI.cpp" />
     <ClCompile Include="Scope.cpp" />
     <ClCompile Include="Sector.cpp" />
     <ClCompile Include="Shader.cpp" />
