--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -361,6 +361,7 @@
     <ClCompile Include="XmlParseHelperOnDestroy.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
+    <ClCompile Include="RTTI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
