--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -192,35 +192,12 @@
     <ClInclude Include="XmlParseHelperOnDestroy.h">
       <Filter>XmlParseHelpers</Filter>
     </ClInclude>
+    <ClInclude Include="InputManager.h">
+      <Filter>Kernel\Input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="Reaction.cpp" />
-    <ClCompile Include="ReactionAttributed.cpp" />
-    <ClCompile Include="Renderer.cpp" />
-    <ClCompile Include="Scope.cpp" />
-    <ClCompile Include="Sector.cpp" />
-    <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="SharedDataTable.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Viewport.cpp" />
-    <ClCompile Include="World.cpp" />
-    <ClCompile Include="WorldState.cpp" />
-    <ClCompile Include="XmlParseHelperAction.cpp" />
-    <ClCompile Include="XmlParseHelperActionEvent.cpp" />
-    <ClCompile Include="XmlParseHelperActionExpression.cpp" />
-    <ClCompile Include="XmlParseHelperActionIf.cpp" />
-    <ClCompile Include="XmlParseHelperActionSwitch.cpp" />
-    <ClCompile Include="XmlParseHelperActionWhile.cpp" />
-    <ClCompile Include="XmlParseHelperBeginPlay.cpp" />
-    <ClCompile Include="XmlParseHelperEntity.cpp" />
-    <ClCompile Include="XmlParseHelperNameValue.cpp" />
-    <ClCompile Include="XmlParseHelperPrimitives.cpp" />
-    <ClCompile Include="XmlParseHelperReaction.cpp" />
-    <ClCompile Include="XmlParseHelperSector.cpp" />
-    <ClCompile Include="XmlParseHelperSprite.cpp" />
-    <ClCompile Include="XmlParseHelperWorld.cpp" />
     <ClCompile Include="XmlParseMaster.cpp" />
     <ClCompile Include="XmlParseHelperTable.cpp">
       <Filter>XmlParseHelpers</Filter>
@@ -388,81 +365,64 @@
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
     <ClCompile Include="RTTI.cpp" />
+    <ClCompile Include="InputManager.cpp">
+      <Filter>Kernel\Input</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Action.h" />
-    <ClInclude Include="ActionEvent.h" />
-    <ClInclude Include="ActionExpression.h" />
-    <ClInclude Include="ActionIfThenElse.h" />
-    <ClInclude Include="ActionList.h" />
-    <ClInclude Include="ActionListSwitch.h" />
-    <ClInclude Include="ActionWhileLoop.h" />
-    <ClInclude Include="Attributed.h" />
-    <ClInclude Include="Datum.h" />
-    <ClInclude Include="DefaultHash.h" />
-    <ClInclude Include="DefaultReserveStrategy.h" />
-    <ClInclude Include="Entity.h" />
-    <ClInclude Include="Event.h" />
-    <ClInclude Include="EventMessageAttributed.h" />
-    <ClInclude Include="EventPublisher.h" />
-    <ClInclude Include="EventQueue.h" />
-    <ClInclude Include="Factory.h" />
-    <ClInclude Include="Game.h" />
-    <ClInclude Include="GameClock.h" />
-    <ClInclude Include="GameTime.h" />
-    <ClInclude Include="Graph.h" />
-    <ClInclude Include="Hashmap.h" />
-    <ClInclude Include="IEventSubscriber.h" />
-    <ClInclude Include="InputManager.h" />
-    <ClInclude Include="OpenGLRenderBuffer.h" />
-    <ClInclude Include="OpenGLRenderDevice.h" />
-    <ClInclude Include="OpenGLShader.h" />
-    <ClInclude Include="OpenGLTexture.h" />
-    <ClInclude Include="Renderable.h" />
-    <ClInclude Include="RenderBuffer.h" />
-    <ClInclude Include="RenderDevice.h" />
-    <ClInclude Include="IXmlParseHelper.h" />
-    <ClInclude Include="pch.h" />
-    <ClInclude Include="Reaction.h" />
-    <ClInclude Include="ReactionAttributed.h" />
-    <ClInclude Include="Renderer.h" />
-    <ClInclude Include="RTTI.h" />
-    <ClInclude Include="Scope.h" />
-    <ClInclude Include="Sector.h" />
-    <ClInclude Include="Shader.h" />
-    <ClInclude Include="SharedDataTable.h" />
-    <ClInclude Include="SList.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="Stack.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="Vector.h" />
-    <ClInclude Include="Viewport.h" />
-    <ClInclude Include="World.h" />
-    <ClInclude Include="WorldState.h" />
-    <ClInclude Include="XmlParseHelperAction.h" />
-    <ClInclude Include="XmlParseHelperActionEvent.h" />
-    <ClInclude Include="XmlParseHelperActionExpression.h" />
-    <ClInclude Include="XmlParseHelperActionIf.h" />
-    <ClInclude Include="XmlParseHelperActionSwitch.h" />
-    <ClInclude Include="XmlParseHelperActionWhile.h" />
-    <ClInclude Include="XmlParseHelperBeginPlay.h" />
-    <ClInclude Include="XmlParseHelperEntity.h" />
-    <ClInclude Include="XmlParseHelperNameValue.h" />
-    <ClInclude Include="XmlParseHelperPrimitives.h" />
-    <ClInclude Include="XmlParseHelperReaction.h" />
-    <ClInclude Include="XmlParseHelperSector.h" />
-    <ClInclude Include="XmlParseHelperSprite.h" />
-    <ClInclude Include="XmlParseHelperWorld.h" />
-    <ClInclude Include="XmlParseMaster.h" />
-    <ClInclude Include="XmlParseHelperTable.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Event.inl" />
+    <None Include="Vector.inl">
+      <Filter>Containers</Filter>
+    </None>
+    <None Include="Stack.inl">
+      <Filter>Containers</Filter>
+    </None>
+    <None Include="SList.inl">
+      <Filter>Containers</Filter>
+    </None>
+    <None Include="Hashmap.inl">
+      <Filter>Containers</Filter>
+    </None>
     <None Include="Factory.inl" />
-    <None Include="Graph.inl" />
-    <None Include="Hashmap.inl" />
-    <None Include="SList.inl" />
-    <None Include="Stack.inl" />
-    <None Include="Vector.inl" />
+    <None Include="Graph.inl">
+      <Filter>Containers</Filter>
+    </None>
+    <None Include="Event.inl">
+      <Filter>Kernel\Event</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Filter Include="Containers">
+      <UniqueIdentifier>{9200d2f2-c985-4c30-b54a-2eed345be36e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="XmlParseHelpers">
+      <UniqueIdentifier>{5a96a001-e4a9-4694-9437-8c9cc16c73c2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel">
+      <UniqueIdentifier>{2033ed55-8f3b-4ec8-bb52-925fe9fb8498}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Actions">
+      <UniqueIdentifier>{4a675d0f-1bc5-41bd-b87b-7d54457da1e0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game">
+      <UniqueIdentifier>{1a8892a5-8c0e-4ec2-9d05-78b2304d8d38}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Containers\DefaultAlgos">
+      <UniqueIdentifier>{12cdb7e0-222a-48dc-a856-d8af539b5712}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Reaction">
+      <UniqueIdentifier>{b81e4602-a96f-4506-9204-cf8ee103b9f4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Event">
+      <UniqueIdentifier>{1701d7bb-f296-4604-b3f4-681d9c373f7f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Graphic">
+      <UniqueIdentifier>{a512568e-1bf5-4b59-8364-517228890d86}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Graphic\opengl">
+      <UniqueIdentifier>{b7662a6a-e35e-4827-bc80-8e5550aff84c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Kernel\Input">
+      <UniqueIdentifier>{47b9067a-1920-4c6a-9348-923f2602694f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
 </Project>
