--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -167,7 +167,7 @@
     </ClInclude>
     <ClInclude Include="CircleColliderComponent.h">
       <Filter>Game\Components</Filter>
-	</ClInclude>
+    </ClInclude>
     <ClInclude Include="RenderBuffer.h">
       <Filter>Kernel\Graphic</Filter>
     </ClInclude>
@@ -211,6 +211,7 @@
     <ClInclude Include="PolygonRenderer.h">
       <Filter>Kernel</Filter>
     </ClInclude>
+    <ClInclude Include="XmlParseHelperCircleColliderComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp" />
@@ -352,7 +353,7 @@
     </ClCompile>
     <ClCompile Include="CircleColliderComponent.cpp">
       <Filter>Game\Components</Filter>
-	</ClCompile>
+    </ClCompile>
     <ClCompile Include="RenderBuffer.cpp">
       <Filter>Kernel\Graphic</Filter>
     </ClCompile>
@@ -397,6 +398,7 @@
     <ClCompile Include="PolygonRenderer.cpp">
       <Filter>Kernel</Filter>
     </ClCompile>
+    <ClCompile Include="XmlParseHelperCircleColliderComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Vector.inl">
