added an action to create entities from external, independent xml files

--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
@@ -202,6 +202,7 @@
   <ItemGroup>
     <ClInclude Include="Action.h" />
     <ClInclude Include="ActionCreateEntity.h" />
+    <ClInclude Include="ActionCreateEntityFromFile.h" />
     <ClInclude Include="ActionDestroyEntity.h" />
     <ClInclude Include="ActionEvent.h" />
     <ClInclude Include="ActionExpression.h" />
@@ -276,6 +277,7 @@
   <ItemGroup>
     <ClCompile Include="Action.cpp" />
     <ClCompile Include="ActionCreateEntity.cpp" />
+    <ClCompile Include="ActionCreateEntityFromFile.cpp" />
     <ClCompile Include="ActionDestroyEntity.cpp" />
     <ClCompile Include="ActionEvent.cpp" />
     <ClCompile Include="ActionExpression.cpp" />
