--- a/GeometryWars/source/Game.Desktop.OpenGL/Game.Desktop.OpenGL.vcxproj.filters
+++ b/GeometryWars/source/Game.Desktop.OpenGL/Game.Desktop.OpenGL.vcxproj.filters
@@ -3,17 +3,19 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp" />
-    <ClCompile Include="OpenGLRenderBuffer.cpp" />
     <ClCompile Include="OpenGLRenderDevice.cpp" />
     <ClCompile Include="OpenGLShader.cpp" />
     <ClCompile Include="OpenGLTexture.cpp" />
     <ClCompile Include="gl3w.c" />
+    <ClCompile Include="OpenGLFrameBuffer.cpp" />
+    <ClCompile Include="OpenGLBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
-    <ClInclude Include="OpenGLRenderBuffer.h" />
     <ClInclude Include="OpenGLRenderDevice.h" />
     <ClInclude Include="OpenGLShader.h" />
     <ClInclude Include="OpenGLTexture.h" />
+    <ClInclude Include="OpenGLFrameBuffer.h" />
+    <ClInclude Include="OpenGLBuffer.h" />
   </ItemGroup>
 </Project>
