--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -153,9 +153,6 @@
     <ClInclude Include="RenderDevice.h">
       <Filter>Kernel\Graphic</Filter>
     </ClInclude>
-    <ClInclude Include="Viewport.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
     <ClInclude Include="XmlParseHelperBeginPlay.h">
       <Filter>XmlParseHelpers</Filter>
     </ClInclude>
@@ -167,9 +164,6 @@
     </ClInclude>
     <ClInclude Include="CircleColliderComponent.h">
       <Filter>Game\Components</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderBuffer.h">
-      <Filter>Kernel\Graphic</Filter>
     </ClInclude>
     <ClInclude Include="Texture.h">
       <Filter>Kernel\Graphic</Filter>
@@ -236,6 +230,12 @@
     </ClInclude>
     <ClInclude Include="XmlParseHelperAnimationFrame.h">
       <Filter>XmlParseHelpers</Filter>
+    </ClInclude>
+    <ClInclude Include="FrameBuffer.h">
+      <Filter>Kernel\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="Buffer.h">
+      <Filter>Kernel\Graphic</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -361,12 +361,6 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>Kernel\Graphic</Filter>
     </ClCompile>
-    <ClCompile Include="RenderDevice.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Viewport.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
     <ClCompile Include="XmlParseHelperBeginPlay.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
@@ -378,15 +372,6 @@
     </ClCompile>
     <ClCompile Include="CircleColliderComponent.cpp">
       <Filter>Game\Components</Filter>
-    </ClCompile>
-    <ClCompile Include="RenderBuffer.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Texture.cpp">
-      <Filter>Kernel\Graphic</Filter>
-    </ClCompile>
-    <ClCompile Include="Shader.cpp">
-      <Filter>Kernel\Graphic</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
       <Filter>Game</Filter>
