--- a/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj
+++ b/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj
@@ -215,12 +215,20 @@
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="D3DRenderBuffer.h" />
+    <ClInclude Include="D3DRenderDevice.h" />
+    <ClInclude Include="D3DShader.h" />
+    <ClInclude Include="D3DTexture.h" />
     <ClInclude Include="GameException.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="PolygonRenderer.h" />
+    <ClInclude Include="OldPolygonRenderer.h" />
     <ClInclude Include="Utility.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="D3DRenderBuffer.cpp" />
+    <ClCompile Include="D3DRenderDevice.cpp" />
+    <ClCompile Include="D3DShader.cpp" />
+    <ClCompile Include="D3DTexture.cpp" />
     <ClCompile Include="GameException.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="pch.cpp">
@@ -229,7 +237,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="PolygonRenderer.cpp" />
+    <ClCompile Include="OldPolygonRenderer.cpp" />
     <ClCompile Include="Utility.cpp" />
   </ItemGroup>
   <ItemGroup>
