--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="AnimationState.h" />
     <ClInclude Include="Animator.h" />
     <ClInclude Include="Attributed.h" />
+    <ClInclude Include="BloomPostProcessing.h" />
     <ClInclude Include="CircleColliderComponent.h" />
     <ClInclude Include="Datum.h" />
     <ClInclude Include="DefaultHash.h" />
@@ -236,6 +237,7 @@
     <ClInclude Include="IEventSubscriber.h" />
     <ClInclude Include="PolygonRenderer.h" />
     <ClInclude Include="InputManager.h" />
+    <ClInclude Include="PostProcessing.h" />
     <ClInclude Include="Renderable.h" />
     <ClInclude Include="Buffer.h" />
     <ClInclude Include="RenderDevice.h" />
@@ -298,6 +300,7 @@
     <ClCompile Include="AnimationState.cpp" />
     <ClCompile Include="Animator.cpp" />
     <ClCompile Include="Attributed.cpp" />
+    <ClCompile Include="BloomPostProcessing.cpp" />
     <ClCompile Include="CircleColliderComponent.cpp" />
     <ClCompile Include="Datum.cpp" />
     <ClCompile Include="DefaultHash.cpp" />
