--- a/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
+++ b/GeometryWars/source/Library.Desktop/Library.Desktop.vcxproj.filters
@@ -153,9 +153,6 @@
     <ClInclude Include="RenderDevice.h">
       <Filter>Kernel\Graphic</Filter>
     </ClInclude>
-    <ClInclude Include="Viewport.h">
-      <Filter>Kernel\Graphic</Filter>
-    </ClInclude>
     <ClInclude Include="ActionTogglePauseMusic.h">
       <Filter>Kernel\Actions</Filter>
     </ClInclude>
@@ -168,9 +165,6 @@
     </ClInclude>
     <ClInclude Include="ActionStopMusic.h">
       <Filter>Kernel\Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="OpenGLRenderDevice.h">
-      <Filter>Kernel\Graphic\opengl</Filter>
     </ClInclude>
     <ClInclude Include="XmlParseHelperBeginPlay.h">
       <Filter>XmlParseHelpers</Filter>
@@ -264,6 +258,12 @@
     </ClInclude>
     <ClInclude Include="BloomPostProcessing.h">
       <Filter>Kernel\Graphic</Filter>
+    </ClInclude>
+    <ClInclude Include="ActionLoadSector.h">
+      <Filter>Kernel\Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="XmlParseHelperDefineSector.h">
+      <Filter>XmlParseHelpers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -416,7 +416,6 @@
     <ClCompile Include="XmlParseHelperPolygon.cpp">
       <Filter>XmlParseHelpers</Filter>
     </ClCompile>
-
     <ClCompile Include="AudioManager.cpp" />
     <ClCompile Include="ActionLoadMusic.cpp">
       <Filter>Kernel\Actions</Filter>
@@ -430,7 +429,6 @@
     <ClCompile Include="ActionTogglePauseMusic.cpp">
       <Filter>Kernel\Actions</Filter>
     </ClCompile>
-
     <ClCompile Include="ActionCreateEntity.cpp">
       <Filter>Kernel\Actions</Filter>
     </ClCompile>
@@ -482,6 +480,12 @@
     </ClCompile>
     <ClCompile Include="BloomPostProcessing.cpp">
       <Filter>Kernel\Graphic</Filter>
+    </ClCompile>
+    <ClCompile Include="ActionLoadSector.cpp">
+      <Filter>Kernel\Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="XmlParseHelperDefineSector.cpp">
+      <Filter>XmlParseHelpers</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
