Sprites are currently just blue squares, but I should merge before usingactual sprites

--- a/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj.filters
+++ b/GeometryWars/source/Game.Desktop.DirectX/Game.Desktop.DirectX.vcxproj.filters
@@ -31,6 +31,12 @@
     <FxCompile Include="GeometryShader.hlsl">
       <Filter>HLSL</Filter>
     </FxCompile>
+    <FxCompile Include="SpriteVertexShader.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
+    <FxCompile Include="SpritePixelShader.hlsl">
+      <Filter>HLSL</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="HLSL">
